# cn-font-split

./: .eslintrc.cjs  .gitattributes  .gitignore  .npmignore  .npmrc  .prettierignore  Cargo.toml  Developer.md  LICENSE  README.md  index.html  otf2ttf.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  publish-all.sh  recode.txt  rollup.config.js  test.js  test2.js  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json  wasm-opt-install.sh  wasmer-install.sh
.github/workflows/: cross-build.yml  release-cn-font-metrics.yml  release-font-replacer.yml  release-rust-core.yml  release-vite-plugin-font.yml  release.yml
benchmark/: index.html  ttf.json  woff.json  woff2.json
crates/lang_unicodes/: Cargo.toml  build.rs
crates/lang_unicodes/scripts/: syl-2.txt
crates/lang_unicodes/src/: cjk_unicodes.rs  lib.rs
crates/proto/: Cargo.toml
script/: fix_vite_lib_assets.mjs
src/: CutTargetFont.js  CutTargetFont.ts  __dirname.js  createImageForFont.ts  createTestHTML.js  createTestHTML.ts  env.d.ts  genFontFile.js  genFontFile.ts  getUnicodeRange.js  index.js  index.ts  index2.ts  lib.rs  message.rs  prepareCharset.js  prepareCharset.ts  template.html
src/charset/: README.md  SC.txt  TCDiff.txt  index.js  symbol.txt  words.json
src/link_subset/: output_css.rs
src/pre_subset/: features.rs  fvar.rs  gen_svg.rs  mod.rs  name_table.rs  plugin.rs
src/utils/: FontUtils.js  FontUtils.ts  formatBytes.js  formatBytes.ts  getUnicodeRange.js  getUnicodeRange.ts
src/woff2-rs/: index.ts
test/: benchmark.js  fonteditor.js  test.js
(+4 files in other folders)
