[package]
name = "cn-font-proto"
version = "0.1.1"
edition = "2021"
description = "proto of cn-font-split"
authors = ["KonghaYao<3446798488@qq.com>"]
homepage = "https://chinese-font.netlify.app/"
repository = "https://github.com/konghaYao/cn-font-split"
license = "Apache-2.0"
include = ["src/**/*"]

[dependencies]
tonic = { version = "0.12.3", optional = true }
prost = "0.13.3"
prost-types = { version = "0.13.3", optional = true }

[features]
server = ["tonic"]

[build-dependencies]
tonic-build = "0.12.3"

[lib]
path = "src/lib/mod.rs"
